--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -132,5 +132,16 @@
       ga('create', 'UA-211719802-1');
       ga('send', 'pageview');
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C54CGGPPQG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-C54CGGPPQG');
+    </script>
   </body>
 </html>
